tests/kyverno-policies/pvc-gpfs-fileset/resources.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-skip
  namespace: user-test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset2
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-no-sa
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-skip
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-fail
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset2
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
