tests/kyverno-policies/pvc-gpfs-fileset/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pvc-gpfs-fileset
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pvc-gpfs-fileset
    rule: validate-webservice-service-account
    resources:
      - pvc-webservice-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-gpfs-fileset
    rule: validate-webservice-service-account
    resources:
      - pvc-webservice-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: validate-webservice-service-account
    resources:
      - pvc-webservice-fail-no-sa
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-fileset-set
    resources:
      - pvc-webservice-fail-no-fileset
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-fileset-set
    resources:
      - pvc-webservice-skip-storageclass
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-fileset-set
    resources:
      - pvc-webservice-pass-storageclass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-fileset-set
    resources:
      - pvc-paas-fail-no-fileset
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-fileset-set
    resources:
      - pvc-paas-pass-storageclass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-scratch-user-set-webservice
    resources:
      - pvc-webservice-scratch-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-scratch-user-set-webservice
    resources:
      - pvc-webservice-scratch-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-scratch-user-set-webservice
    resources:
      - pvc-paas-scratch-fail
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-scratch-user-set-paas
    resources:
      - pvc-paas-scratch-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-scratch-user-set-paas
    resources:
      - pvc-paas-scratch-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-gpfs-fileset
    rule: pvc-validate-scratch-user-set-paas
    resources:
      - pvc-webservice-scratch-fail
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-gpfs-fileset
    rule: validate-webservice-fileset-annotation
    resources:
      - pvc-webservice-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-gpfs-fileset
    rule: validate-webservice-fileset-annotation
    resources:
      - pvc-webservice-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: validate-webservice-fileset-annotation
    resources:
      - pvc-webservice-fail
      - pvc-webservice-fail-no-sa
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-gpfs-fileset
    rule: validate-paas-fileset-annotation
    resources:
      - pvc-paas-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-gpfs-fileset
    rule: validate-paas-fileset-annotation
    resources:
      - pvc-paas-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-gpfs-fileset
    rule: validate-paas-fileset-annotation
    resources:
      - pvc-paas-fail
    kind: PersistentVolumeClaim
    result: fail
